--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,7 @@ header{
 .usuario{
     width: 30px;
     height: 30px;
+    margin-right: 0.5rem;
 }
 
 main{
@@ -41,22 +42,11 @@ section{
     padding-right: 20px;
 }
 
-section .text2{
-    text-align: justify;
-    margin-right: 30px;
-    margin-bottom: 40px;
-}
-
-section img{
-    width: 400px;
-    padding: 0;
-}
-
 footer{
     display: flex;
     flex-wrap: wrap;
     padding-top: 30px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     margin: 50px auto 0;
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     justify-content: center;
@@ -92,9 +82,19 @@ footer img{
     padding: 10px 0;
 }
 
+.texto-vitrina{
+    font-size: 25px;
+    font-family: 'Lato', sans-serif;
+}
+
+.titulo-vitrina{
+    font-size: 35px;
+    font-weight: bold;
+    font-family: 'Lato', sans-serif;
+}
+
 .vitrina{
-    display: flex;
-    margin: 0 auto;
+    margin-top: 0.5rem;
     width: 100%;
     height: 500px;
 }
@@ -123,7 +123,8 @@ footer img{
     display: flex;
     justify-content: center;
     font-size: 40px;
-    margin: 20px 0 20px 0;
+    margin: 3rem 0 3rem 0;
+    /*margin: 30px 0 20px 0;*/
 }
 
 .subtitulo{
@@ -189,3 +190,13 @@ footer img{
     color: darkslateblue;
 }
 
+.text2{
+    text-align: justify;
+    margin-right: 30px;
+    margin-bottom: 40px;
+}
+
+.imgperfil{
+    width: 30%;
+    height: auto;
+}
