--- a/css/estilos.css
+++ b/css/estilos.css
@@ -200,3 +200,66 @@ footer img{
     width: 30%;
     height: auto;
 }
+
+.container {  
+    justify-content: center;
+    padding: 15px 0;
+    width: 100vw;
+    height: 150vh;
+
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 3fr 1fr 3fr 1fr;
+    grid-auto-columns: 2fr;
+    gap: 15px 10px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "tituloGrid tituloGrid tituloGrid"
+      "cat1 none cat3"
+      "cat1 cat2 cat3"
+      "cat4 cat2 cat6"
+      "cat4 cat5 cat6"
+      "none1 cat5 none2";
+  }
+
+.tituloGrid{
+    grid-area: tituloGrid;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.cat1{
+grid-area: cat1; 
+width: auto;
+height: 34rem;
+}
+
+.cat2{
+grid-area: cat2; 
+width: auto;
+height: 34rem;
+}
+
+.cat3{
+grid-area: cat3; 
+width: auto;
+height: 34rem;
+}
+
+.cat4{
+grid-area: cat4; 
+width: auto;
+height: 34rem;
+}
+
+.cat5{
+grid-area: cat5; 
+width: auto;
+height: 34rem;
+}
+
+.cat6{
+grid-area: cat6; 
+width: auto;
+height: 34rem;
+}
