--- a/css/estilos.css
+++ b/css/estilos.css
@@ -128,8 +128,7 @@ footer img{
 }
 
 .subtitulo{
-    display: flex;
-    justify-content: center;
+    display: block;
     font-size: 30px;
 }
 
@@ -262,4 +261,39 @@ height: 34rem;
 grid-area: cat6; 
 width: auto;
 height: 34rem;
+}
+
+.containerBlog{
+    width: 100vw;
+    height: 70vh;
+
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows:  1fr 3fr 1fr;
+    grid-auto-columns: 2fr;
+    gap: 15px 10px;
+    grid-auto-flow: row;
+    grid-template-areas:
+    "tituloBlog subtituloCompras"
+    "blog compras";
+}
+
+.tituloBlog{
+    grid-area: tituloBlog;
+    margin-top: 4rem;
+    margin-left: 1rem;
+}
+
+.subtituloCompras{
+    grid-area: subtituloCompras;
+    margin-top: 4rem;
+    margin-left: 1rem;
+}
+
+.blog{
+    grid-area: blog;
+}
+
+.compras{
+    grid-area: compras;
 }
