--- a/css/estilos.css
+++ b/css/estilos.css
@@ -130,6 +130,7 @@ footer img{
 .subtitulo{
     display: block;
     font-size: 30px;
+    text-align: center;
 }
 
 .productos{
@@ -221,6 +222,8 @@ footer img{
       "none1 cat5 none2";
   }
 
+  
+
 .tituloGrid{
     grid-area: tituloGrid;
     text-align: center;
@@ -297,3 +300,36 @@ height: 34rem;
 .compras{
     grid-area: compras;
 }
+
+/*.container {  
+    justify-content: center;
+    padding: 15px 0;
+    width: 100vw;
+    height: 150vh;
+
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 3fr 1fr 3fr 1fr;
+    grid-auto-columns: 2fr;
+    gap: 15px 10px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "tituloGrid tituloGrid tituloGrid"
+      "cat1 none cat3"
+      "cat1 cat2 cat3"
+      "cat4 cat2 cat6"
+      "cat4 cat5 cat6"
+      "none1 cat5 none2";
+  }*/
+
+  .contenedorJoyeros{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .imgJoyeros{
+    width: auto;
+    height: 30rem;
+    margin: 0 2rem;
+  }
