--- a/css/estilos.css
+++ b/css/estilos.css
@@ -300,36 +300,59 @@ height: 34rem;
 .compras{
     grid-area: compras;
 }
-
-/*.container {  
-    justify-content: center;
-    padding: 15px 0;
-    width: 100vw;
-    height: 150vh;
-
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
-    grid-template-rows: 1fr 1fr 3fr 1fr 3fr 1fr;
-    grid-auto-columns: 2fr;
-    gap: 15px 10px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "tituloGrid tituloGrid tituloGrid"
-      "cat1 none cat3"
-      "cat1 cat2 cat3"
-      "cat4 cat2 cat6"
-      "cat4 cat5 cat6"
-      "none1 cat5 none2";
-  }*/
-
-  .contenedorJoyeros{
+.contenedorJoyeros{
     display: flex;
     flex-direction: row;
     justify-content: center;
-  }
+}
 
-  .imgJoyeros{
+.imgJoyeros{
     width: auto;
     height: 30rem;
     margin: 0 2rem;
-  }
+}
+
+.containerUsuario{
+    width: 80vw;
+    height: 60vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows:  0.2fr 3fr;
+    grid-auto-columns: 1fr;
+    gap: 0;
+    grid-auto-flow: row;
+    grid-template-areas:
+    "tituloRegistrate tituloInicio"
+    "formularioRegistro formularioInicio";
+    padding: 1rem 1rem;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.tituloRegistrate{
+    grid-area: tituloRegistrate;
+    text-align: flex-start;
+    font-size: 26px;
+    background-color: aliceblue;
+    padding: 1rem;
+    margin-right: 1rem;
+}
+
+.tituloInicio{
+    grid-area: tituloInicio;
+    text-align: flex-start;
+    font-size: 26px;
+    background-color: aliceblue;
+    padding: 1rem;
+    margin-left: 1rem;
+}
+
+.formularioRegistro{
+    grid-area: formularioRegistro;
+    font-size: 18px;
+}
+
+.formularioInicio{
+    grid-area: formularioInicio;
+    font-size: 18px;
+}
