--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,8 +13,11 @@ body{
 }
 
 header{
-    position: fixed;
+    position: sticky;
+    z-index: 100;
     width: 100%;
+    top: 0;
+    font-family: 'Lato', sans-serif;
 }
 
 .mainBg{
@@ -31,9 +34,9 @@ header{
     margin-right: 0.5rem;
 }
 
-main{
-    padding-top:3.5rem;
-}
+ .pagPrincipal{
+    padding-top: 3.5rem;
+ }
 
 section{
     display: flex;
@@ -95,8 +98,9 @@ footer img{
 
 .vitrina{
     margin-top: 0.5rem;
-    width: 100%;
+   /* width: 100%;*/
     height: 500px;
+    object-fit: cover;
 }
 
 .categorias{
@@ -122,9 +126,8 @@ footer img{
 .titulo{
     display: flex;
     justify-content: center;
-    font-size: 40px;
-    margin: 3rem 0 3rem 0;
-    /*margin: 30px 0 20px 0;*/
+    font-size: 35px;
+    margin: 2rem auto;
 }
 
 .subtitulo{
@@ -192,8 +195,6 @@ footer img{
 
 .text2{
     text-align: justify;
-    margin-right: 30px;
-    margin-bottom: 40px;
 }
 
 .imgperfil{
@@ -201,12 +202,11 @@ footer img{
     height: auto;
 }
 
-.container {  
+.container{  
     justify-content: center;
     padding: 15px 0;
     width: 100vw;
     height: 150vh;
-
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
     grid-template-rows: 1fr 1fr 3fr 1fr 3fr 1fr;
@@ -267,30 +267,35 @@ height: 34rem;
 }
 
 .containerBlog{
+    font-family: 'Lato', sans-serif;
     width: 100vw;
-    height: 70vh;
-
+    height: 60vh;
     display: grid;
     grid-template-columns: 2fr 2fr;
-    grid-template-rows:  1fr 3fr 1fr;
+    grid-template-rows:  0fr 1fr 2fr;
     grid-auto-columns: 2fr;
-    gap: 15px 10px;
+    gap: 15px;
     grid-auto-flow: row;
     grid-template-areas:
     "tituloBlog subtituloCompras"
-    "blog compras";
+    "blog compras"
+    "blog imgCompras";
+}
+
+.tituloContainer{
+    margin-left: 1rem;
+    justify-items: flex-end;
+    text-decoration: underline;
+    font-size: 2rem;
 }
 
 .tituloBlog{
     grid-area: tituloBlog;
-    margin-top: 4rem;
-    margin-left: 1rem;
+   
 }
 
 .subtituloCompras{
     grid-area: subtituloCompras;
-    margin-top: 4rem;
-    margin-left: 1rem;
 }
 
 .blog{
@@ -300,6 +305,13 @@ height: 34rem;
 .compras{
     grid-area: compras;
 }
+
+.imgCompras{
+    grid-area: imgCompras;
+    width: 100vh;
+    padding: 0 1rem;
+}
+
 .contenedorJoyeros{
     display: flex;
     flex-direction: row;
@@ -329,8 +341,7 @@ height: 34rem;
     justify-content: center;
 }
 
-.tituloRegistrate{
-    grid-area: tituloRegistrate;
+.tituloCuenta{
     text-align: flex-start;
     font-size: 26px;
     background-color: aliceblue;
@@ -338,13 +349,12 @@ height: 34rem;
     margin-right: 1rem;
 }
 
+.tituloRegistrate{
+    grid-area: tituloRegistrate;
+}
+
 .tituloInicio{
     grid-area: tituloInicio;
-    text-align: flex-start;
-    font-size: 26px;
-    background-color: aliceblue;
-    padding: 1rem;
-    margin-left: 1rem;
 }
 
 .formularioRegistro{
