--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,10 +34,6 @@ header{
     margin-right: 0.5rem;
 }
 
- .pagPrincipal{
-    padding-top: 3.5rem;
- }
-
 section{
     display: flex;
     flex-wrap: nowrap;
@@ -50,7 +46,7 @@ footer{
     flex-wrap: wrap;
     padding-top: 30px;
     padding-bottom: 50px;
-    margin: 50px auto 0;
+    margin: 1rem auto 0;
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     justify-content: center;
     justify-content: space-evenly;
@@ -97,10 +93,12 @@ footer img{
 }
 
 .vitrina{
-    margin-top: 0.5rem;
-   /* width: 100%;*/
     height: 500px;
     object-fit: cover;
+}
+
+.carousel{
+    margin-top: 4.7rem;
 }
 
 .categorias{
@@ -118,8 +116,7 @@ footer img{
 
 .tarjeta{
     text-align: center;
-    margin: 5rem 4rem 5rem 0;
-    font-weight: bold;
+    margin: 2rem 1rem 2rem 1rem;
     font-size: 20px;
 }
 
@@ -173,7 +170,7 @@ footer img{
     padding: 0.5rem 1rem;
     background-color: darkslateblue;
     border-color: darkslateblue;
-    border-color: none;
+    margin-bottom: 1rem;
 }
 
 .vertodo:hover{
@@ -193,25 +190,53 @@ footer img{
     color: darkslateblue;
 }
 
-.text2{
-    text-align: justify;
+.containerSomos{
+    font-family: 'Lato', sans-serif;
+    width: 100vw;
+    height: 90vh;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr 0.1fr 2fr;
+    grid-auto-columns: 2fr;
+    grid-auto-flow: row;
+    gap: 15px;
+    grid-template-areas:
+    "somos imgperfil"
+    "tituloVentajas tituloVentajas"
+    "ventajas ventajas";
+}
+
+.somos{
+    grid-area: somos;
 }
 
 .imgperfil{
-    width: 30%;
-    height: auto;
+    grid-area: imgperfil;
+    width: 40rem;
 }
 
-.container{  
+.tituloVentajas{
+    grid-area: tituloVentajas;
+    font-size: 2rem;
+}
+
+.ventajas{
+    grid-area: ventajas;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.container{
     justify-content: center;
     padding: 15px 0;
     width: 100vw;
-    height: 150vh;
+    height: 160vh;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
     grid-template-rows: 1fr 1fr 3fr 1fr 3fr 1fr;
     grid-auto-columns: 2fr;
-    gap: 15px 10px;
+    gap: 15px;
     grid-auto-flow: row;
     grid-template-areas:
       "tituloGrid tituloGrid tituloGrid"
@@ -221,8 +246,6 @@ footer img{
       "cat4 cat5 cat6"
       "none1 cat5 none2";
   }
-
-  
 
 .tituloGrid{
     grid-area: tituloGrid;
@@ -284,8 +307,7 @@ height: 34rem;
 
 .tituloContainer{
     margin-left: 1rem;
-    justify-items: flex-end;
-    text-decoration: underline;
+    text-align: center;
     font-size: 2rem;
 }
 
@@ -324,6 +346,11 @@ height: 34rem;
     margin: 0 2rem;
 }
 
+.banner{
+    justify-content: center;
+    margin-top: 20px;
+}
+
 .containerUsuario{
     width: 80vw;
     height: 60vh;
@@ -355,6 +382,10 @@ height: 34rem;
 
 .tituloInicio{
     grid-area: tituloInicio;
+}
+
+.text2{
+    text-align: justify;
 }
 
 .formularioRegistro{
