--- a/css/estilos.css
+++ b/css/estilos.css
@@ -232,15 +232,14 @@ footer img{
     justify-content: center;
     padding: 15px 0;
     width: 100vw;
-    height: 160vh;
+    height: 140vh;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
-    grid-template-rows: 1fr 1fr 3fr 1fr 3fr 1fr;
+    grid-template-rows: 0.2fr 1fr 0.2fr 1fr 3fr;
     grid-auto-columns: 2fr;
     gap: 15px;
     grid-auto-flow: row;
     grid-template-areas:
-      "tituloGrid tituloGrid tituloGrid"
       "cat1 none cat3"
       "cat1 cat2 cat3"
       "cat4 cat2 cat6"
@@ -427,5 +426,18 @@ height: 34rem;
     .vitrina{
         height: 200px;
         object-fit: cover;
+    }
+    .slider-container{
+        display: flex;
+        justify-content: space-between;
+        width: 60vw;
+        height: 53vh;
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+    }
+    .slider-container img {
+        flex: 0 0 100%;
+        scroll-snap-align: center;
+        height: 25rem;
     }
 }
