--- a/css/estilos.css
+++ b/css/estilos.css
@@ -94,7 +94,7 @@ footer img{
 }
 
 .vitrina{
-    height: 500px;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -110,9 +110,7 @@ footer img{
 
 .icono{
     width: 200px;
-    border-radius: 90%;
     padding: 2rem;
-    margin-bottom: 1rem;
 }
 
 .tarjeta{
@@ -137,20 +135,17 @@ footer img{
 .productos{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 .tarjeta2{
     text-align: center;
     font-size: 20px;
-    margin: 3rem 0;
     
 }
 
 .joya{
     width: 300px;
     padding: 0.5rem;
-    margin-bottom: 1rem;
     border-radius: 5%;
 }
 
@@ -334,21 +329,8 @@ height: 34rem;
     padding: 0 1rem;
 }
 
-.contenedorJoyeros{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.imgJoyeros{
-    width: auto;
-    height: 30rem;
-    margin: 0 2rem;
-}
-
 .banner{
     justify-content: center;
-    margin-top: 20px;
 }
 
 .containerUsuario{
@@ -398,46 +380,191 @@ height: 34rem;
     font-size: 18px;
 }
 
-@media(max-width:360px){
+@media (max-width:575px){
+    .slider-container{
+        display: flex;
+        justify-content: space-between;
+        height: 53vh;
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+    }
+    .slider-container img{
+        scroll-snap-align: center;
+    }
+    footer{
+        flex-direction: column;
+    }
+    footer img{
+        margin: 0 2rem 1rem 2rem;
+    }
+    .pie{
+        padding-left: 2rem;
+    }
+    .slider-productos{
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        padding: 1.5rem 0 1rem 0;
+    }
+    .subtitulo{
+        font-size: 1.5rem;
+        margin: 2rem 0 0 0;
+    }
+    .tarjeta2 p{
+        font-size: 1.1rem;
+    }
     .tarjeta{
         margin: 0;
     }
     .icono{
         width: 160px;
     }
-    .subtitulo{
-        margin: 1rem 1rem;
-        font-size: 25px;
-    }
-    .tarjeta2{
-        margin: 1rem 1rem;
-    }
-    footer{
-        flex-direction: column;
-        align-items: center;
-    }
-    .pie{
-        text-align: center;
-        padding-left: 0;
+    .categorias{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-auto-columns: 1fr;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "tarjeta tarjeta"
+            "tarjeta tarjeta";
     }
     .titulo-vitrina{
-        font-size: 15px;
+        font-size: 20px;
     }
-    .vitrina{
-        height: 200px;
-        object-fit: cover;
-    }
-    .slider-container{
-        display: flex;
-        justify-content: space-between;
-        width: 60vw;
-        height: 53vh;
+    .slider-joyeros{
         overflow-x: scroll;
         scroll-snap-type: x mandatory;
+        justify-content: space-between;
+        margin-bottom: 1rem;
     }
-    .slider-container img {
-        flex: 0 0 100%;
+    .slider-joyeros img{
         scroll-snap-align: center;
-        height: 25rem;
+        margin: 0 0.5rem;
+    }
+    .banner img{
+        width: 100%;
+        margin: 0 2rem;
+        border-radius: 5px;
+    }
+}
+
+@media (min-width:576px) {
+    .container{
+        max-width: max-content;
+        height: auto;
+        grid-template-rows: 0.2fr 0.8fr 0.2fr 0.8fr 0.2fr;
+    } 
+    footer{
+        flex-wrap: nowrap;
+    }
+    .pie{
+        font-size: 0.8rem;
+        padding-left: 0;
+    }
+    .categorias{
+        flex-wrap: nowrap;
+    }
+    .categorias p{
+        font-size: 1.2rem;
+    }
+    .icono{
+        padding: 1rem;
+    }
+    .subtitulo{
+        font-size: 1.5rem;
+    }
+    .slider-productos{
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        padding: 1.5rem 0 1rem 0;
+    }
+    .tarjeta2 p{
+        font-size: 1.1rem;
+    }
+    .titulo-vitrina{
+        font-size: 25px;
+    }
+    .slider-joyeros{
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+    }
+    .slider-joyeros img{
+        scroll-snap-align: center;
+        margin: 0 0.5rem;
+        width: 50%;
+    }
+    .banner img{
+        width: 100%;
+        margin: 0 2rem 1rem 2rem;
+        border-radius: 5px;
+    }
+}
+
+@media (min-width:768px){
+    .container{
+        max-width: max-content;
+        height: auto;
+        grid-template-rows: 0.2fr 0.8fr 0.2fr 0.8fr 0.2fr;
+    }
+    .slider-productos{
+        display: flex;
+        width: 100vw;
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        justify-content: space-between;
+    }
+    .icono{
+        width: 130px;
+    }
+    .titulo-vitrina{
+        font-size: 30px;
+    }
+    .contenedorJoyeros{
+        display: flex;
+        flex-wrap: nowrap;
+        max-width: max-content;
+    }
+    .imgJoyeros{
+        width: 31%;
+    }
+}
+
+@media (min-width:992px) {
+    .container{
+        max-width: max-content;
+        height: auto;
+    }  
+    .containerUsuario{
+        padding: 0;
+    }
+    .tituloCuenta{
+        width: 45vw;
+    }
+    .vitrina{
+        height: auto;
+    }
+    .titulo-vitrina{
+        font-size: 40px;
+    }
+    .icono{
+        width: 150px;
+    }
+    .subtitulo{
+        font-size: 1.8rem;
+    }
+    .contenedorJoyeros{
+        display: flex;
+        flex-direction: row;
+        width: 100vw;
+        justify-content: space-between;
+        margin: 2rem auto;
+    }
+    .slider-joyeros img{
+        width: 500px;
+    }
+    .banner img{
+        width: 88%;   
     }
 }
