--- a/css/estilos.css
+++ b/css/estilos.css
@@ -289,15 +289,9 @@ height: 34rem;
     width: 100vw;
     height: 60vh;
     display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows:  0fr 1fr 2fr;
     grid-auto-columns: 2fr;
     gap: 15px;
     grid-auto-flow: row;
-    grid-template-areas:
-    "tituloBlog subtituloCompras"
-    "blog compras"
-    "blog imgCompras";
 }
 
 .tituloContainer{
@@ -334,24 +328,13 @@ height: 34rem;
 }
 
 .containerUsuario{
-    width: 80vw;
-    height: 60vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows:  0.2fr 3fr;
-    grid-auto-columns: 1fr;
-    gap: 0;
-    grid-auto-flow: row;
-    grid-template-areas:
-    "tituloRegistrate tituloInicio"
-    "formularioRegistro formularioInicio";
     padding: 1rem 1rem;
     margin: 0 auto;
     justify-content: center;
 }
 
 .tituloCuenta{
-    text-align: flex-start;
+    text-align: center;
     font-size: 26px;
     background-color: aliceblue;
     padding: 1rem;
@@ -466,6 +449,43 @@ height: 34rem;
     .tarjeta h3{
         font-size: 20px;
     }
+    .containerBlog{
+        height: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.1fr 1fr 0.1fr 0.1fr;
+        grid-auto-columns: 1fr;
+        grid-template-areas: 
+        "tituloBlog"
+        "blog"
+        "subtituloCompras"
+        "compras"
+        "imgCompras";
+    }
+    .subtituloCompras{
+        margin-top: 2rem;
+    }
+    .tituloContainer{
+        font-size: 25px;
+    }
+    .containerUsuario{
+        display: flex;
+        flex-wrap: wrap;
+        height: auto;
+        margin-bottom: 2rem;
+        max-width: max-content;
+    }
+    .tituloCuenta{
+        font-size: 1.5rem;
+        padding: 0.5rem 8.8rem;
+        margin: 1rem auto;
+    }
+    .formularioRegistro{
+        font-size: 1rem;
+        margin-bottom: 2rem;
+    }
+    .formularioInicio{
+        font-size: 1rem;
+    }
 }
 
 @media (min-width:576px) {
@@ -536,6 +556,37 @@ height: 34rem;
     .tarjeta{
         margin: 0 2rem;
     }
+    .containerBlog{
+        height: auto;
+        grid-template-columns: 2fr;
+        grid-template-rows: 0.1fr 1fr 0.1fr 0.1fr;
+        grid-template-areas: 
+        "tituloBlog"
+        "blog"
+        "subtituloCompras"
+        "compras"
+        "imgCompras";
+    }
+    .subtituloCompras{
+        margin-top: 2rem;
+    }
+    .imgCompras{
+        margin: 0 auto;
+    }
+    .containerUsuario{
+        display: flex;
+        flex-wrap: wrap;
+        height: auto;
+        width: auto;
+        margin-bottom: 2rem;
+    }
+    .tituloCuenta{
+        padding: 0.5rem 8rem;
+        margin-bottom: 1rem;
+    }
+    .formularioRegistro{
+        margin-bottom: 2rem;
+    }
 }
 
 @media (min-width:768px){
@@ -567,6 +618,16 @@ height: 34rem;
     }
     .tarjeta{
         margin: 0 4.5rem;
+    }
+    .containerUsuario{
+        display: flex;
+        flex-wrap: wrap;
+        width: auto;
+        margin-bottom: 2rem;
+    }
+    .tituloCuenta{
+        padding: 0.5rem 15rem;
+        margin-bottom: 2rem;
     }
 }
 
@@ -622,5 +683,32 @@ height: 34rem;
     }
     .tarjeta{
         margin: 0;
+    }
+    .containerBlog{
+        grid-template-columns: 2fr 2fr;
+        grid-template-rows:  0fr 1fr 1.5fr;
+        grid-template-areas:
+        "tituloBlog subtituloCompras"
+        "blog compras"
+        "blog imgCompras";
+    }
+    .subtituloCompras{
+        margin-top: 0;
+    }
+    .containerUsuario{
+        width: 80vw;
+        height: auto;
+        display: grid;
+        grid-auto-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows:  0.2fr 3fr;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "tituloRegistrate tituloInicio"
+        "formularioRegistro formularioInicio";
+    }
+    .tituloCuenta{
+        display: flex;
+        justify-content: flex-start;
     }
 }
