--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,7 +5,7 @@
 
 body {
   padding-bottom: 0;
-  font-family: 'Lato', sans-serif; }
+  font-family: "Lato", sans-serif; }
 
 .bg {
   background-color: #eaeaea; }
@@ -15,12 +15,12 @@ header {
   z-index: 100;
   width: 100%;
   top: 0;
-  font-family: 'Lato', sans-serif; }
+  font-family: "Lato", sans-serif; }
   header .mainBg {
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); }
     header .mainBg div div .navbar-text {
       list-style: none;
-      font-family: 'Lato', sans-serif; }
+      font-family: "Lato", sans-serif; }
       header .mainBg div div .navbar-text .usuario {
         width: 40px;
         height: 40px;
@@ -37,7 +37,7 @@ main .carousel {
   main .carousel div div .titulo-vitrina {
     font-size: 35px;
     font-weight: bold;
-    font-family: 'Lato', sans-serif; }
+    font-family: "Lato", sans-serif; }
     @media (max-width: 575px) {
       main .carousel div div .titulo-vitrina {
         font-size: 20px; } }
@@ -52,14 +52,13 @@ main .carousel {
         font-size: 40px; } }
   main .carousel div div .texto-vitrina {
     font-size: 25px;
-    font-family: 'Lato', sans-serif; }
+    font-family: "Lato", sans-serif; }
 
 main .categorias {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-left: 10px;
-  padding-right: 10px; }
+  padding: 5rem 1rem 3rem; }
   main .categorias .tarjeta {
     text-align: center;
     margin: 2rem 1rem 2rem 1rem;
@@ -124,22 +123,24 @@ main .subtitulo {
 main .slider-productos {
   display: flex;
   flex-wrap: nowrap;
-  padding: 1.5rem 0 1rem 0; }
+  padding: 2rem 0 1rem 0; }
   @media (max-width: 575px) {
     main .slider-productos {
       overflow-x: scroll;
-      scroll-snap-type: x mandatory; } }
+      scroll-snap-type: x mandatory;
+      scrollbar-gutter: auto; } }
   @media (min-width: 576px) {
     main .slider-productos {
       overflow-x: scroll;
-      scroll-snap-type: x mandatory; } }
+      scroll-snap-type: x mandatory;
+      scrollbar-gutter: auto; } }
   @media (min-width: 768px) {
     main .slider-productos {
       display: flex;
-      width: 100vw;
       overflow-x: scroll;
       scroll-snap-type: x mandatory;
-      justify-content: space-between; } }
+      justify-content: space-between;
+      scrollbar-gutter: auto; } }
   main .slider-productos .tarjeta2 {
     text-align: center;
     font-size: 20px; }
@@ -175,7 +176,7 @@ main .botonver {
       transform: scale(1.2, 1.2); }
     main .botonver .vertodo .vertodo-texto {
       text-decoration: none;
-      color: #ffffff;
+      color: white;
       font-size: 16px; }
       main .botonver .vertodo .vertodo-texto:hover {
         text-decoration: none;
@@ -188,59 +189,47 @@ main .titulo {
   margin: 2rem auto; }
 
 main .containerSomos {
-  font-family: 'Lato', sans-serif;
-  width: 100vw;
+  font-family: "Lato", sans-serif;
   height: auto;
-  padding: 0 0.5rem;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 2fr 0.1fr 2fr;
-  grid-auto-columns: 2fr;
-  grid-auto-flow: row;
-  gap: 15px;
-  grid-template-areas: "somos imgperfil" "tituloVentajas tituloVentajas" "ventajas ventajas"; }
-  @media (max-width: 575px) {
-    main .containerSomos {
-      height: auto;
-      grid-template-columns: 1fr;
-      grid-template-rows: 0fr 0.5fr 0fr 0fr;
-      grid-template-areas: "imgperfil" "somos" "tituloVentajas" "ventajas"; } }
-  @media (min-width: 576px) {
-    main .containerSomos {
-      height: auto;
-      grid-template-columns: 1fr;
-      grid-template-rows: 0fr 0.5fr 0fr 0fr;
-      grid-template-areas: "imgperfil" "somos" "tituloVentajas" "ventajas"; } }
-  @media (min-width: 992px) {
-    main .containerSomos {
-      grid-template-columns: 2fr 1fr;
-      grid-template-rows: 2fr 0.1fr;
-      grid-auto-columns: 2fr;
-      grid-auto-flow: row;
-      gap: 15px;
-      grid-template-areas: "somos imgperfil" "tituloVentajas tituloVentajas" "ventajas ventajas"; } }
+  padding: 0 0.5rem; }
   main .containerSomos .text2 {
     text-align: justify; }
   main .containerSomos .imgperfil {
-    grid-area: imgperfil;
-    width: 40rem; }
+    margin-bottom: 1rem; }
     @media (max-width: 575px) {
       main .containerSomos .imgperfil {
+        grid-area: imgperfil;
         width: auto; } }
     @media (min-width: 576px) {
       main .containerSomos .imgperfil {
-        width: auto; } }
+        width: 100%; } }
+    @media (min-width: 992px) {
+      main .containerSomos .imgperfil {
+        width: 45%;
+        height: max-content; } }
   main .containerSomos .somos {
-    grid-area: somos; }
+    gap: 1.2rem;
+    margin: 0 1rem; }
+    @media (max-width: 575px) {
+      main .containerSomos .somos {
+        flex-wrap: wrap;
+        margin: 0 0.5rem; } }
+    @media (min-width: 576px) {
+      main .containerSomos .somos {
+        flex-wrap: wrap;
+        margin: 0 0.5rem; } }
+    @media (min-width: 992px) {
+      main .containerSomos .somos {
+        display: flex;
+        flex-wrap: nowrap; } }
   main .containerSomos .tituloVentajas {
-    grid-area: tituloVentajas;
     font-size: 2rem;
-    text-align: center; }
+    text-align: center;
+    margin: 2rem 0; }
     @media (max-width: 575px) {
       main .containerSomos .tituloVentajas {
         font-size: 30px; } }
   main .containerSomos .ventajas {
-    grid-area: ventajas;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -267,8 +256,6 @@ main .tituloGrid {
 main .container {
   justify-content: center;
   padding: 15px 0;
-  margin: 0 1rem;
-  width: 100vw;
   height: 140vh;
   display: grid;
   grid-template-columns: 2fr 2fr 2fr;
@@ -290,7 +277,7 @@ main .container {
       grid-template-rows: 0.2fr 0.8fr 0.2fr 0.8fr 0.2fr; } }
   @media (min-width: 992px) {
     main .container {
-      padding: 0 10rem;
+      max-width: 80%;
       height: auto; } }
   main .container .cat1 {
     grid-area: cat1;
@@ -317,13 +304,13 @@ main .container {
     justify-content: space-between;
     height: 53vh;
     overflow-x: scroll;
-    scroll-snap-type: x mandatory; }
+    scroll-snap-type: x mandatory;
+    scrollbar-gutter: auto; }
   main .slider-container img {
     scroll-snap-align: center; } }
 
 main .containerBlog {
-  font-family: 'Lato', sans-serif;
-  width: 100vw;
+  font-family: "Lato", sans-serif;
   height: 60vh;
   padding: 0 0.5rem;
   display: grid;
@@ -368,7 +355,9 @@ main .containerBlog {
   main .containerBlog .compras {
     grid-area: compras; }
     main .containerBlog .compras .text2 {
-      text-align: justify; }
+      text-align: justify;
+      list-style: none;
+      padding-left: 0; }
   main .containerBlog .imgCompras {
     grid-area: imgCompras; }
     @media (min-width: 576px) {
@@ -413,6 +402,8 @@ main .containerUsuario {
       grid-template-rows: 0.2fr 3fr;
       grid-auto-flow: row;
       grid-template-areas: "tituloRegistrate tituloInicio" "formularioRegistro formularioInicio"; } }
+  main .containerUsuario .casilla {
+    padding: 0.5rem 0; }
   main .containerUsuario .tituloCuenta {
     text-align: center;
     font-size: 26px;
@@ -489,10 +480,12 @@ main .slider-joyeros {
   @media (max-width: 575px) {
     main .slider-joyeros img {
       scroll-snap-align: center;
+      scrollbar-gutter: auto;
       margin: 0 0.5rem; } }
   @media (min-width: 576px) {
     main .slider-joyeros img {
       scroll-snap-align: center;
+      scrollbar-gutter: auto;
       margin: 0 0.5rem;
       width: 50%; } }
   @media (min-width: 992px) {
@@ -509,7 +502,6 @@ main .slider-joyeros {
   main .contenedorJoyeros {
     display: flex;
     flex-direction: row;
-    width: 100vw;
     justify-content: center;
     margin: 2rem auto; } }
 
